# docs/openapi.yaml
@@ -117,6 +117,26 @@ paths:
           description: Déconnecté avec succès
 
   /users/me:
+    delete:
+      tags:
+        - Users
+      summary: Supprimer le compte utilisateur
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Compte supprimé avec succès
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: account_deleted_successfully
+        '401':
+          description: missing_or_invalid_token
+
     get:
       tags:
         - Users
